Added current-load-extension (load-extension handler)
Unix: fixed file-or-directory-permissions for group-based 
 permissions when the group is not the current group (but
 still includes the user)
Windows: fixed directory-exists? et al. for UNC paths
Added local-expand-body-expression
Added link-exists?
Added copy-file
Added path-list-string->path-list
Added collection-path
Changed initial setting of current-library-collection-paths
Unit definitions and embedded definitions are not allowed
 to shadow syntax or macro names; this restriction resolves
 all potential ambiguity resulting from shadowing syntax
Changed display for symbols containg special characters:
 the special characters are not escaped (or bar-quoted)
Changed write to use the value of (read-accept-bar-quote)
 for printing symbols containing special charaters; if
 bar qute reading is off, it is turned off for printing, too
Fixed unit/sig: correctly handles syntax where defintions in 
 the unit shadow syntactic forms
Fixed round of exact rational n/d in the case when (odd? d)
 and (= (remainder n d) (quotient d 2))
Extended exp, sin, cos, tan, log, asin, acons, atan to
 complex numbers; changed sqrt to choose the root with a
 positive real part
Removed rectangular <, >, <=, >= for complex numbers
Changed storage of loaded-library table from built into the
 `require-library' procedure to built into the current
 namespace
Added require-relative-library
Fixed error messages for +, -, etc. to show all arguments
Changed MzLib's pconver.ss libraries; the print-convert-hook@
 unit was removed (along with the pchookr.ss library) and
 replaced with parameters defined in pconverr.ss for similar
 (more powerful) hooks.
Fixed interfaces for compiled-file (.zo) loading across
 MzScheme startups
Unused interned symbols are now garbage-collected
Added support for single-precision floating points (turned
 off in default compilation)
Changed read-eval-print-loop, removing its cooperation with