@@ -94,10 +94,30 @@
 
 (test #t rename-file "tmp5" "tmp5x")
 (test #f rename-file "tmp5" "tmp5x")
+(close-output-port (open-output-file "tmp5"))
+(test #t file-exists? "tmp5")
+(test #t file-exists? "tmp5x")
+(test #f rename-file "tmp5" "tmp5x")
+(test #f rename-file "tmp5" "down")
+(delete-file "tmp5")
+(test #f file-exists? "tmp5")
 (test #t rename-file (build-path "down" "tmp8") (build-path "down" "tmp8x"))
 (test #f rename-file (build-path "down" "tmp8") (build-path "down" "tmp8x"))
 (test #t rename-file (build-path deepdir "tmp7") (build-path deepdir "tmp7x"))
 (test #f rename-file (build-path deepdir "tmp7") (build-path deepdir "tmp7x"))
+
+(test #t make-directory "downx")
+(test #f rename-file "down" "downx")
+(test #t delete-directory "downx")
+
+(test #t rename-file "down" "downx")
+(test #t directory-exists? "downx")
+(test #f directory-exists? "down")
+(test #t file-exists? (build-path "downx" "tmp8x"))
+(test #f file-exists? (build-path "down" "tmp8x"))
+(test #f rename-file "down" "downx")
+(test #t rename-file "downx" "down")
+(test #t file-exists? (build-path "down" "tmp8x"))
 
 (test #t rename-file (build-path deepdir "tmp7x") "tmp7x")
 (test #f rename-file (build-path deepdir "tmp7x") "tmp7x")
