@@ -15,6 +15,8 @@ Added link-exists?
 Added copy-file
 Added path-list-string->path-list
 Added collection-path
+Fixed rename-file: works for directories too, but the
+  destination file/directory cannot exist already.
 Changed initial setting of current-library-collection-paths
 Unit definitions and embedded definitions are not allowed
  to shadow syntax or macro names; this restriction resolves
